blue update and image

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </nav>
     <section id="profile">
         <div class="section__pic-container">
-            <img src="./assets/profile-pic (2).png" alt="Arnab Kumar profile picture">
+            <img src="./assets/picofme (2).png" alt="Arnab Kumar profile picture">
         </div>
         <div class="section__text">
             <p class="section__text__p1">Hey, I am</p>
@@ -56,11 +56,11 @@
             </button>
             </div>
             <div id="socials-container">
-                <img src="./assets/icons8-linkedin-48.png" alt="My LinkedIn"
+                <img src="./assets/linkedin.png" alt="My LinkedIn"
                 class="icon" onclick="location.href='https://www.linkedin.com/in/arnab-kumar-7ab840204/'"/>
-                <img src="./assets/github_logo.png" alt="My GitHub"
+                <img src="./assets/github.png" alt="My GitHub"
                 class="icon" onclick="location.href='https://github.com/codeer-nexus'"/>
-                <img src="./assets/gmail.jpg" alt="My Mail"
+                <img src="./assets/email.png" alt="My Mail"
                 class="icon" onclick="location.href='https://arnabkr6276@gmail.com'"/>
             </div>
         </div>
@@ -85,7 +85,7 @@
                   class="icon"
                 />
                 <h3>Experience</h3>
-                <p>Intern at ARDE, DRDO<br>Research at VIT Chennai</p>
+                <p>Intern at ARDE, DRDO<br>Research work at VIT Chennai</p>
               </div>
               <div class="details-container">
                 <img
@@ -112,7 +112,7 @@
         />
       </section>
       <section id="experience">
-        <p class="section__text__p1">Explore My</p>
+        <p class="section__text__p1"><!-- to be added --></p>
         <h1 class="title">Experiance and skills</h1>
         <div class="experience-details-container">
           <div class="about-containers">
@@ -247,7 +247,7 @@
             <div class="details-container color-container">
               <div class="article-container">
                 <img
-                  src="./assets/project-1.png"
+                  src="./assets/ECG.jpeg"
                   alt="Project 1"
                   class="project-img"
                 />
